fix bug in subnav on mobile

--- a/sparkle/#sources/scss/header.scss
+++ b/sparkle/#sources/scss/header.scss
@@ -173,7 +173,7 @@
     &:hover {
       .header-main__subnav {
         top: 100%;
-        padding-top: 10px;
+        margin-top: 10px;
         opacity: 1;
       }
       > a {
